# vklite-test

./: .gitignore  CMakeLists.txt  README.md  build-windows.cmd
cmake/: vklite-android.cmake  vklite-linux.cmake  vklite-windows.cmake  vkliteConfig.cmake.in
cmake/import/: import_glfw.cmake  import_glm.cmake  import_stb.cmake  import_tinyobjloader.cmake  import_vklite.cmake  import_vulkan.cmake  import_vulkan_headers.cmake
cmake/util/: file.cmake  module.cmake  shader.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/image/: CMakeLists.txt  ImageInterface.cpp  ImageInterface.h  StbImage.cpp  StbImage.h  image.h  stb_image.cpp
src/common/math/: CMakeLists.txt  MvpMatrix.cpp  MvpMatrix.h  glm.h
src/common/model/: CMakeLists.txt  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Vertex.cpp  Vertex.h  tiny_obj_loader.cpp
src/common/sandbox/: CMakeLists.txt  Sandbox.cpp  Sandbox.h  TestBase.cpp  TestBase.h
src/common/util/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  Timer.cpp  Timer.h
src/test01_simple_triangle/shader/: 01_triangle.vert
src/test01_simple_triangle/src/: Test01.cpp  Test01.h  main.cpp
src/test02_single_color_triangle/: CMakeLists.txt
src/test02_single_color_triangle/shader/: 02_triangle_color.vert
src/test02_single_color_triangle/src/: Test02.cpp  Test02.h  main.cpp
src/test03_colored_triangle/shader/: 03_colored_triangle.vert
src/test03_colored_triangle/src/: Test03.cpp  Test03.h  main.cpp
src/test04_mvp_matrix/shader/: 04_mvp_matrix.vert
src/test04_mvp_matrix/src/: Test04.cpp  Test04.h  main.cpp
src/test05_texture_image/: CMakeLists.txt
src/test05_texture_image/shader/: 05_texture_image.frag  05_texture_image.vert
src/test05_texture_image/src/: Test05.cpp  Test05.h  main.cpp
src/test06_load_3d_model/: CMakeLists.txt
src/test06_load_3d_model/shader/: 06_load_3d_model.frag  06_load_3d_model.vert
src/test06_load_3d_model/src/: Test06.cpp  Test06.h  main.cpp
src/test07_compute_shader/: CMakeLists.txt
src/test07_compute_shader/shader/: 07_compute.comp  07_compute.frag  07_compute.vert
src/test07_compute_shader/src/: Test07.cpp  Test07.h  main.cpp
